<resources>
    <string name="app_name">DanielsAndrew_CE02</string>
    <string name="header_one">SKATEBOARDING SAFETY</string>
    <string name="body_one">Most people know what skateboarding is, but fewer people are aware of the skateboarding laws in their area or that they even exist. Both skateboarders and property owners should learn about the law not only to avoid potential harm or injury to themselves and others, but to avoid fines and other penalties.</string>
    <string name="header_two">WHAT IS PROHIBITED?</string>
    <string name="body_two">Skateboarding laws generally restrict or prohibit skateboarding as a recreational activity - specifically the time, manner, age of person skateboarding, and location in which skateboarding may take place. One town may allow skateboarding during certain times of day (for example "from a half-hour after dawn to a half-hour before dusk"), while another town may limit skateboarding to certain areas (for example "on sidewalks in residential areas only").</string>
    <string name="header_three">LANDOWNER LIABILITY ISSUES</string>
    <string name="body_three">The issue of landowner liability for injuries stemming from skateboarding is an important concern. Often, skateboarders who are injured on public or private property may hold a landowner liable for his or her damages or injuries from skateboarding.Under a "premises liability" theory, for example, a public or private landowner may be held liability for injuries that occur on his or her property, especially if the injuries were "foreseeable".This includes cases where a minor (or under-age person) was invited onto private property. While some states have enacted specific laws arising out of "hazardous recreational activities", other states have included skateboarding within more general immunity laws or laws that aim to shield landowners from liability lawsuits arising from individuals engaging in a particular activity, such as skateboarding.</string>
</resources>
